--- a/assets/styles/scss/admin.scss
+++ b/assets/styles/scss/admin.scss
@@ -5,7 +5,7 @@ $sidebar-w-sm: 0vw;
 $sidebar-w-closed: 0;
 $main-navbar-h: 10vh;
 
-body{
+body {
     background: #f8f9fa !important;
 }
 
@@ -16,6 +16,7 @@ body{
     background: $dark_blue;
     z-index: 100;
     overflow: hidden;
+
     &.closed {
         width: $sidebar-w-closed !important;
     }
@@ -39,7 +40,7 @@ body{
 
         &.active {
             .nav-link {
-                background: rgba(#896E33,1);
+                background: rgba(#896E33, 1);
                 color: white !important;
                 padding-top: 10px;
                 padding-bottom: 10px;
@@ -50,7 +51,7 @@ body{
 
         &:not(.active):hover {
             .nav-link {
-                background: rgba(#896E33,0.4);
+                background: rgba(#896E33, 0.4);
                 padding-top: 10px;
                 padding-bottom: 10px;
                 color: white !important;
@@ -103,13 +104,16 @@ main {
     font-size: 0.8rem;
 }
 
-.table{
-    .table-header{
+.table {
+    .table-header {
         background: $dark-blue-accent !important;
         background-color: $dark-blue-accent !important;
     }
 }
 
-.create-form-card{
+.create-form-card {
     border-top: 4px solid $dark-blue !important;
+}
+
+.row-collapse-toggler {
 }
