--- a/assets/styles/css/admin.css
+++ b/assets/styles/css/admin.css
@@ -9,9 +9,30 @@ body {
   background: #17233a;
   z-index: 100;
   overflow: hidden;
+  transition: 200ms !important;
 }
 .sidebar.closed {
   width: 0 !important;
+}
+@media screen and (max-width: 768px) {
+  .sidebar.closed {
+    width: 50vw !important;
+  }
+}
+@media screen and (max-width: 600px) {
+  .sidebar.closed {
+    width: 70vw !important;
+  }
+}
+@media screen and (max-width: 1300px) {
+  .sidebar {
+    width: 21vw !important;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .sidebar {
+    width: 27vw !important;
+  }
 }
 @media screen and (max-width: 768px) {
   .sidebar {
@@ -56,8 +77,27 @@ body {
   margin-left: 18px;
 }
 
+.sidebar-overlay-sm {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  top: 0 !important;
+  left: 0 !important;
+  z-index: 99;
+  transition: 200ms;
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  .sidebar-overlay-sm.show {
+    width: 100% !important;
+    display: block;
+  }
+}
+
 main {
   margin-left: 17vw;
+  transition: 200ms !important;
 }
 main.expanded {
   margin-left: 0 !important;
@@ -67,9 +107,19 @@ main .content {
   padding-right: 10px;
   padding-top: 20px;
 }
+@media screen and (max-width: 1300px) {
+  main {
+    margin-left: 21vw !important;
+  }
+}
+@media screen and (max-width: 1000px) {
+  main {
+    margin-left: 27vw !important;
+  }
+}
 @media screen and (max-width: 768px) {
   main {
-    margin-left: 0vw;
+    margin-left: 0vw !important;
   }
 }
 
