--- a/assets/styles/css/custom.css
+++ b/assets/styles/css/custom.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;700&display=swap");
 :root,
 [data-bs-theme=light] {
   --bs-blue: #0953DE;
@@ -2992,6 +2991,298 @@ progress {
   --bs-btn-border-radius: var(--bs-border-radius-sm);
 }
 
+.modal {
+  --bs-modal-zindex: 1055;
+  --bs-modal-width: 500px;
+  --bs-modal-padding: 1rem;
+  --bs-modal-margin: 0.5rem;
+  --bs-modal-color: ;
+  --bs-modal-bg: var(--bs-body-bg);
+  --bs-modal-border-color: var(--bs-border-color-translucent);
+  --bs-modal-border-width: var(--bs-border-width);
+  --bs-modal-border-radius: 10px;
+  --bs-modal-box-shadow: var(--bs-box-shadow-sm);
+  --bs-modal-inner-border-radius: calc(var(--bs-border-radius-lg) - (var(--bs-border-width)));
+  --bs-modal-header-padding-x: 1rem;
+  --bs-modal-header-padding-y: 1rem;
+  --bs-modal-header-padding: 1rem 1rem;
+  --bs-modal-header-border-color: var(--bs-border-color);
+  --bs-modal-header-border-width: var(--bs-border-width);
+  --bs-modal-title-line-height: 1.5;
+  --bs-modal-footer-gap: 0.5rem;
+  --bs-modal-footer-bg: ;
+  --bs-modal-footer-border-color: var(--bs-border-color);
+  --bs-modal-footer-border-width: var(--bs-border-width);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: var(--bs-modal-zindex);
+  display: none;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  outline: 0;
+}
+
+.modal-dialog {
+  position: relative;
+  width: auto;
+  margin: var(--bs-modal-margin);
+  pointer-events: none;
+}
+.modal.fade .modal-dialog {
+  transition: transform 0.3s ease-out;
+  transform: scale(0.8);
+}
+@media (prefers-reduced-motion: reduce) {
+  .modal.fade .modal-dialog {
+    transition: none;
+  }
+}
+.modal.show .modal-dialog {
+  transform: none;
+}
+.modal.modal-static .modal-dialog {
+  transform: scale(1.02);
+}
+
+.modal-dialog-scrollable {
+  height: calc(100% - var(--bs-modal-margin) * 2);
+}
+.modal-dialog-scrollable .modal-content {
+  max-height: 100%;
+  overflow: hidden;
+}
+.modal-dialog-scrollable .modal-body {
+  overflow-y: auto;
+}
+
+.modal-dialog-centered {
+  display: flex;
+  align-items: center;
+  min-height: calc(100% - var(--bs-modal-margin) * 2);
+}
+
+.modal-content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  color: var(--bs-modal-color);
+  pointer-events: auto;
+  background-color: var(--bs-modal-bg);
+  background-clip: padding-box;
+  border: var(--bs-modal-border-width) solid var(--bs-modal-border-color);
+  border-radius: var(--bs-modal-border-radius);
+  outline: 0;
+}
+
+.modal-backdrop {
+  --bs-backdrop-zindex: 1050;
+  --bs-backdrop-bg: #000;
+  --bs-backdrop-opacity: 0.5;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: var(--bs-backdrop-zindex);
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--bs-backdrop-bg);
+}
+.modal-backdrop.fade {
+  opacity: 0;
+}
+.modal-backdrop.show {
+  opacity: var(--bs-backdrop-opacity);
+}
+
+.modal-header {
+  display: flex;
+  flex-shrink: 0;
+  align-items: center;
+  justify-content: space-between;
+  padding: var(--bs-modal-header-padding);
+  border-bottom: var(--bs-modal-header-border-width) solid var(--bs-modal-header-border-color);
+  border-top-left-radius: var(--bs-modal-inner-border-radius);
+  border-top-right-radius: var(--bs-modal-inner-border-radius);
+}
+.modal-header .btn-close {
+  padding: calc(var(--bs-modal-header-padding-y) * 0.5) calc(var(--bs-modal-header-padding-x) * 0.5);
+  margin: calc(-0.5 * var(--bs-modal-header-padding-y)) calc(-0.5 * var(--bs-modal-header-padding-x)) calc(-0.5 * var(--bs-modal-header-padding-y)) auto;
+}
+
+.modal-title {
+  margin-bottom: 0;
+  line-height: var(--bs-modal-title-line-height);
+}
+
+.modal-body {
+  position: relative;
+  flex: 1 1 auto;
+  padding: var(--bs-modal-padding);
+}
+
+.modal-footer {
+  display: flex;
+  flex-shrink: 0;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: flex-end;
+  padding: calc(var(--bs-modal-padding) - var(--bs-modal-footer-gap) * 0.5);
+  background-color: var(--bs-modal-footer-bg);
+  border-top: var(--bs-modal-footer-border-width) solid var(--bs-modal-footer-border-color);
+  border-bottom-right-radius: var(--bs-modal-inner-border-radius);
+  border-bottom-left-radius: var(--bs-modal-inner-border-radius);
+}
+.modal-footer > * {
+  margin: calc(var(--bs-modal-footer-gap) * 0.5);
+}
+
+@media (min-width: 576px) {
+  .modal {
+    --bs-modal-margin: 1.75rem;
+    --bs-modal-box-shadow: var(--bs-box-shadow);
+  }
+  .modal-dialog {
+    max-width: var(--bs-modal-width);
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .modal-sm {
+    --bs-modal-width: 300px;
+  }
+}
+@media (min-width: 992px) {
+  .modal-lg,
+  .modal-xl {
+    --bs-modal-width: 800px;
+  }
+}
+@media (min-width: 1200px) {
+  .modal-xl {
+    --bs-modal-width: 1140px;
+  }
+}
+.modal-fullscreen {
+  width: 100vw;
+  max-width: none;
+  height: 100%;
+  margin: 0;
+}
+.modal-fullscreen .modal-content {
+  height: 100%;
+  border: 0;
+  border-radius: 0;
+}
+.modal-fullscreen .modal-header,
+.modal-fullscreen .modal-footer {
+  border-radius: 0;
+}
+.modal-fullscreen .modal-body {
+  overflow-y: auto;
+}
+
+@media (max-width: 575.98px) {
+  .modal-fullscreen-sm-down {
+    width: 100vw;
+    max-width: none;
+    height: 100%;
+    margin: 0;
+  }
+  .modal-fullscreen-sm-down .modal-content {
+    height: 100%;
+    border: 0;
+    border-radius: 0;
+  }
+  .modal-fullscreen-sm-down .modal-header,
+  .modal-fullscreen-sm-down .modal-footer {
+    border-radius: 0;
+  }
+  .modal-fullscreen-sm-down .modal-body {
+    overflow-y: auto;
+  }
+}
+@media (max-width: 767.98px) {
+  .modal-fullscreen-md-down {
+    width: 100vw;
+    max-width: none;
+    height: 100%;
+    margin: 0;
+  }
+  .modal-fullscreen-md-down .modal-content {
+    height: 100%;
+    border: 0;
+    border-radius: 0;
+  }
+  .modal-fullscreen-md-down .modal-header,
+  .modal-fullscreen-md-down .modal-footer {
+    border-radius: 0;
+  }
+  .modal-fullscreen-md-down .modal-body {
+    overflow-y: auto;
+  }
+}
+@media (max-width: 991.98px) {
+  .modal-fullscreen-lg-down {
+    width: 100vw;
+    max-width: none;
+    height: 100%;
+    margin: 0;
+  }
+  .modal-fullscreen-lg-down .modal-content {
+    height: 100%;
+    border: 0;
+    border-radius: 0;
+  }
+  .modal-fullscreen-lg-down .modal-header,
+  .modal-fullscreen-lg-down .modal-footer {
+    border-radius: 0;
+  }
+  .modal-fullscreen-lg-down .modal-body {
+    overflow-y: auto;
+  }
+}
+@media (max-width: 1199.98px) {
+  .modal-fullscreen-xl-down {
+    width: 100vw;
+    max-width: none;
+    height: 100%;
+    margin: 0;
+  }
+  .modal-fullscreen-xl-down .modal-content {
+    height: 100%;
+    border: 0;
+    border-radius: 0;
+  }
+  .modal-fullscreen-xl-down .modal-header,
+  .modal-fullscreen-xl-down .modal-footer {
+    border-radius: 0;
+  }
+  .modal-fullscreen-xl-down .modal-body {
+    overflow-y: auto;
+  }
+}
+@media (max-width: 1399.98px) {
+  .modal-fullscreen-xxl-down {
+    width: 100vw;
+    max-width: none;
+    height: 100%;
+    margin: 0;
+  }
+  .modal-fullscreen-xxl-down .modal-content {
+    height: 100%;
+    border: 0;
+    border-radius: 0;
+  }
+  .modal-fullscreen-xxl-down .modal-header,
+  .modal-fullscreen-xxl-down .modal-footer {
+    border-radius: 0;
+  }
+  .modal-fullscreen-xxl-down .modal-body {
+    overflow-y: auto;
+  }
+}
 .align-baseline {
   vertical-align: baseline !important;
 }
@@ -7934,7 +8225,6 @@ progress {
 .btn-light-dark-blue {
   background: rgba(23, 35, 58, 0.1) !important;
   color: #17233a !important;
-  font-weight: bold !important;
   border: 1px solid rgba(23, 35, 58, 0.2) !important;
 }
 .btn-light-dark-blue:hover {
@@ -7964,10 +8254,23 @@ progress {
   background: rgba(23, 35, 58, 0.1) !important;
 }
 
+.bordered-btn-dark-blue {
+  color: #17233a;
+  background: transparent !important;
+  border: 1px solid rgba(23, 35, 58, 0.3) !important;
+}
+.bordered-btn-dark-blue:hover {
+  color: #17233a !important;
+  background: rgba(23, 35, 58, 0.1) !important;
+}
+.bordered-btn-dark-blue:focus {
+  color: #17233a !important;
+  background: rgba(23, 35, 58, 0.1) !important;
+}
+
 .btn-light-dark-blue-accent {
   background: rgba(51, 66, 94, 0.1) !important;
   color: #33425E !important;
-  font-weight: bold !important;
   border: 1px solid rgba(51, 66, 94, 0.2) !important;
 }
 .btn-light-dark-blue-accent:hover {
@@ -7997,10 +8300,23 @@ progress {
   background: rgba(51, 66, 94, 0.1) !important;
 }
 
+.bordered-btn-dark-blue-accent {
+  color: #33425E;
+  background: transparent !important;
+  border: 1px solid rgba(51, 66, 94, 0.3) !important;
+}
+.bordered-btn-dark-blue-accent:hover {
+  color: #33425E !important;
+  background: rgba(51, 66, 94, 0.1) !important;
+}
+.bordered-btn-dark-blue-accent:focus {
+  color: #33425E !important;
+  background: rgba(51, 66, 94, 0.1) !important;
+}
+
 .btn-light-blue {
   background: rgba(9, 83, 222, 0.1) !important;
   color: #0953DE !important;
-  font-weight: bold !important;
   border: 1px solid rgba(9, 83, 222, 0.2) !important;
 }
 .btn-light-blue:hover {
@@ -8030,10 +8346,23 @@ progress {
   background: rgba(9, 83, 222, 0.1) !important;
 }
 
+.bordered-btn-blue {
+  color: #0953DE;
+  background: transparent !important;
+  border: 1px solid rgba(9, 83, 222, 0.3) !important;
+}
+.bordered-btn-blue:hover {
+  color: #0953DE !important;
+  background: rgba(9, 83, 222, 0.1) !important;
+}
+.bordered-btn-blue:focus {
+  color: #0953DE !important;
+  background: rgba(9, 83, 222, 0.1) !important;
+}
+
 .btn-light-dark-yellow {
   background: rgba(137, 110, 51, 0.1) !important;
   color: #896E33 !important;
-  font-weight: bold !important;
   border: 1px solid rgba(137, 110, 51, 0.2) !important;
 }
 .btn-light-dark-yellow:hover {
@@ -8063,10 +8392,23 @@ progress {
   background: rgba(137, 110, 51, 0.1) !important;
 }
 
+.bordered-btn-dark-yellow {
+  color: #896E33;
+  background: transparent !important;
+  border: 1px solid rgba(137, 110, 51, 0.3) !important;
+}
+.bordered-btn-dark-yellow:hover {
+  color: #896E33 !important;
+  background: rgba(137, 110, 51, 0.1) !important;
+}
+.bordered-btn-dark-yellow:focus {
+  color: #896E33 !important;
+  background: rgba(137, 110, 51, 0.1) !important;
+}
+
 .btn-light-primary {
   background: rgba(9, 83, 222, 0.1) !important;
   color: #0953DE !important;
-  font-weight: bold !important;
   border: 1px solid rgba(9, 83, 222, 0.2) !important;
 }
 .btn-light-primary:hover {
@@ -8096,10 +8438,23 @@ progress {
   background: rgba(9, 83, 222, 0.1) !important;
 }
 
+.bordered-btn-primary {
+  color: #0953DE;
+  background: transparent !important;
+  border: 1px solid rgba(9, 83, 222, 0.3) !important;
+}
+.bordered-btn-primary:hover {
+  color: #0953DE !important;
+  background: rgba(9, 83, 222, 0.1) !important;
+}
+.bordered-btn-primary:focus {
+  color: #0953DE !important;
+  background: rgba(9, 83, 222, 0.1) !important;
+}
+
 .btn-light-secondary {
   background: rgba(108, 117, 125, 0.1) !important;
   color: #6c757d !important;
-  font-weight: bold !important;
   border: 1px solid rgba(108, 117, 125, 0.2) !important;
 }
 .btn-light-secondary:hover {
@@ -8129,10 +8484,23 @@ progress {
   background: rgba(108, 117, 125, 0.1) !important;
 }
 
+.bordered-btn-secondary {
+  color: #6c757d;
+  background: transparent !important;
+  border: 1px solid rgba(108, 117, 125, 0.3) !important;
+}
+.bordered-btn-secondary:hover {
+  color: #6c757d !important;
+  background: rgba(108, 117, 125, 0.1) !important;
+}
+.bordered-btn-secondary:focus {
+  color: #6c757d !important;
+  background: rgba(108, 117, 125, 0.1) !important;
+}
+
 .btn-light-success {
   background: rgba(25, 135, 84, 0.1) !important;
   color: #198754 !important;
-  font-weight: bold !important;
   border: 1px solid rgba(25, 135, 84, 0.2) !important;
 }
 .btn-light-success:hover {
@@ -8162,10 +8530,23 @@ progress {
   background: rgba(25, 135, 84, 0.1) !important;
 }
 
+.bordered-btn-success {
+  color: #198754;
+  background: transparent !important;
+  border: 1px solid rgba(25, 135, 84, 0.3) !important;
+}
+.bordered-btn-success:hover {
+  color: #198754 !important;
+  background: rgba(25, 135, 84, 0.1) !important;
+}
+.bordered-btn-success:focus {
+  color: #198754 !important;
+  background: rgba(25, 135, 84, 0.1) !important;
+}
+
 .btn-light-info {
   background: rgba(13, 202, 240, 0.1) !important;
   color: #0dcaf0 !important;
-  font-weight: bold !important;
   border: 1px solid rgba(13, 202, 240, 0.2) !important;
 }
 .btn-light-info:hover {
@@ -8195,10 +8576,23 @@ progress {
   background: rgba(13, 202, 240, 0.1) !important;
 }
 
+.bordered-btn-info {
+  color: #0dcaf0;
+  background: transparent !important;
+  border: 1px solid rgba(13, 202, 240, 0.3) !important;
+}
+.bordered-btn-info:hover {
+  color: #0dcaf0 !important;
+  background: rgba(13, 202, 240, 0.1) !important;
+}
+.bordered-btn-info:focus {
+  color: #0dcaf0 !important;
+  background: rgba(13, 202, 240, 0.1) !important;
+}
+
 .btn-light-warning {
   background: rgba(222, 155, 9, 0.1) !important;
   color: #DE9B09 !important;
-  font-weight: bold !important;
   border: 1px solid rgba(222, 155, 9, 0.2) !important;
 }
 .btn-light-warning:hover {
@@ -8228,10 +8622,23 @@ progress {
   background: rgba(222, 155, 9, 0.1) !important;
 }
 
+.bordered-btn-warning {
+  color: #DE9B09;
+  background: transparent !important;
+  border: 1px solid rgba(222, 155, 9, 0.3) !important;
+}
+.bordered-btn-warning:hover {
+  color: #DE9B09 !important;
+  background: rgba(222, 155, 9, 0.1) !important;
+}
+.bordered-btn-warning:focus {
+  color: #DE9B09 !important;
+  background: rgba(222, 155, 9, 0.1) !important;
+}
+
 .btn-light-danger {
   background: rgba(220, 53, 69, 0.1) !important;
   color: #dc3545 !important;
-  font-weight: bold !important;
   border: 1px solid rgba(220, 53, 69, 0.2) !important;
 }
 .btn-light-danger:hover {
@@ -8261,10 +8668,23 @@ progress {
   background: rgba(220, 53, 69, 0.1) !important;
 }
 
+.bordered-btn-danger {
+  color: #dc3545;
+  background: transparent !important;
+  border: 1px solid rgba(220, 53, 69, 0.3) !important;
+}
+.bordered-btn-danger:hover {
+  color: #dc3545 !important;
+  background: rgba(220, 53, 69, 0.1) !important;
+}
+.bordered-btn-danger:focus {
+  color: #dc3545 !important;
+  background: rgba(220, 53, 69, 0.1) !important;
+}
+
 .btn-light-light {
   background: rgba(248, 249, 250, 0.1) !important;
   color: #f8f9fa !important;
-  font-weight: bold !important;
   border: 1px solid rgba(248, 249, 250, 0.2) !important;
 }
 .btn-light-light:hover {
@@ -8294,10 +8714,23 @@ progress {
   background: rgba(248, 249, 250, 0.1) !important;
 }
 
+.bordered-btn-light {
+  color: #f8f9fa;
+  background: transparent !important;
+  border: 1px solid rgba(248, 249, 250, 0.3) !important;
+}
+.bordered-btn-light:hover {
+  color: #f8f9fa !important;
+  background: rgba(248, 249, 250, 0.1) !important;
+}
+.bordered-btn-light:focus {
+  color: #f8f9fa !important;
+  background: rgba(248, 249, 250, 0.1) !important;
+}
+
 .btn-light-dark {
   background: rgba(33, 37, 41, 0.1) !important;
   color: #212529 !important;
-  font-weight: bold !important;
   border: 1px solid rgba(33, 37, 41, 0.2) !important;
 }
 .btn-light-dark:hover {
@@ -8327,6 +8760,20 @@ progress {
   background: rgba(33, 37, 41, 0.1) !important;
 }
 
+.bordered-btn-dark {
+  color: #212529;
+  background: transparent !important;
+  border: 1px solid rgba(33, 37, 41, 0.3) !important;
+}
+.bordered-btn-dark:hover {
+  color: #212529 !important;
+  background: rgba(33, 37, 41, 0.1) !important;
+}
+.bordered-btn-dark:focus {
+  color: #212529 !important;
+  background: rgba(33, 37, 41, 0.1) !important;
+}
+
 * {
-  font-family: "Raleway", sans-serif;
+  font-family: "Outfit", sans-serif;
 }/*# sourceMappingURL=custom.css.map */
