--- a/assets/styles/scss/admin.scss
+++ b/assets/styles/scss/admin.scss
@@ -1,7 +1,10 @@
 @import './colors';
 
 $sidebar-w: 17vw;
+$sidebar-w-md: 27vw;
+$sidebar-w-lg: 21vw;
 $sidebar-w-sm: 0vw;
+$sidebar-w-sm-open: 50vw;
 $sidebar-w-closed: 0;
 $main-navbar-h: 10vh;
 
@@ -16,9 +19,27 @@ body {
     background: $dark_blue;
     z-index: 100;
     overflow: hidden;
+    transition: 200ms !important;
+
+    
 
     &.closed {
         width: $sidebar-w-closed !important;
+        
+        
+        @media screen and (max-width:768px) {
+            width: $sidebar-w-sm-open !important;
+        }
+        @media screen and (max-width:600px) {
+            width: 70vw !important;
+        }
+    }
+
+    @media screen and (max-width:1300px) {
+        width: $sidebar-w-lg !important;
+    }
+    @media screen and (max-width:1000px) {
+        width: $sidebar-w-md !important;
     }
 
     @media screen and (max-width:768px) {
@@ -74,11 +95,30 @@ body {
     }
 }
 
+.sidebar-overlay-sm{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(#000,0.3);
+    top: 0 !important;
+    left: 0  !important;
+    z-index: 99;
+    transition: 200ms;
+    display: none;
+    &.show{
+        @media screen and (max-width:768px) {
+            width: 100% !important;
+            display: block;
+        }
+    }
+}
+
 main {
     margin-left: $sidebar-w;
-
+    transition: 200ms !important;
     &.expanded {
         margin-left: $sidebar-w-closed !important;
+       
     }
 
     .content {
@@ -87,8 +127,14 @@ main {
         padding-top: 20px;
     }
 
+    @media screen and (max-width:1300px) {
+        margin-left: $sidebar-w-lg !important;
+    }
+    @media screen and (max-width:1000px) {
+        margin-left: $sidebar-w-md !important;
+    }
     @media screen and (max-width:768px) {
-        margin-left: $sidebar-w-sm;
+        margin-left: $sidebar-w-sm !important;
     }
 }
 
@@ -117,3 +163,4 @@ main {
 
 .row-collapse-toggler {
 }
+
