--- a/assets/styles/scss/app.scss
+++ b/assets/styles/scss/app.scss
@@ -86,7 +86,11 @@ body {
             max-width: 70% !important;
             display: flex;
             gap: 10px;
-            margin-bottom: 15px !important;
+            margin-bottom: 20px !important;
+
+            @media screen and (max-width:768px) {
+                max-width: 90% !important;
+            }
 
             .chat {
                 border: 1px solid rgba($color: $dark_blue, $alpha: 0.3);
@@ -166,4 +170,39 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.clickable{
+    position: relative;
+    cursor: pointer;
+    &::before{
+        content: " ";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        background: rgba($color: rgb(157, 157, 157), $alpha:0.1);
+        display: none;
+    }
+    &:hover{
+        &::before{
+            display: block;
+        }
+    }
+    &:active{
+        &::before{
+            display: block;
+            background: rgba($color: rgb(99, 99, 99), $alpha:0.2) !important;
+        }
+    }
+}
+
+.profile-dropdown{
+    .dropdown-item{
+        &:hover{
+            color: white !important;
+            background: rgba(gray,0.2);
+        }
+    }
 }
