--- a/assets/styles/scss/custom.scss
+++ b/assets/styles/scss/custom.scss
@@ -1,5 +1,5 @@
 @import './colors';
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;700&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;700&display=swap');
 // Custom.scss
 // Option B: Include parts of Bootstrap
 
@@ -14,6 +14,8 @@ $warning: $gold;
 
 // 4. Include any default map overrides here
 $theme-colors: map-merge($map1: $custom_theme, $map2: $theme-colors);
+$modal-fade-transform: scale(.8);
+$modal-content-border-radius: 10px;
 // 5. Include remainder of required parts
 @import "../../../node_modules/bootstrap/scss/maps";
 @import "../../../node_modules/bootstrap/scss/mixins";
@@ -29,6 +31,7 @@ $theme-colors: map-merge($map1: $custom_theme, $map2: $theme-colors);
 @import "../../../node_modules/bootstrap/scss/grid";
 @import "../../../node_modules/bootstrap/scss/helpers";
 @import "../../../node_modules/bootstrap/scss/buttons";
+@import "../../../node_modules/bootstrap/scss/modal";
 
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../../../node_modules/bootstrap/scss/utilities/api";
@@ -40,9 +43,7 @@ $value in $theme-colors {
     .btn-light-#{$name} {
         background: rgba($color: $value, $alpha: 0.1) !important;
         color: $value !important;
-        font-weight: bold !important;
         border: 1px solid rgba($color: $value, $alpha: 0.2) !important;
-        ;
 
         &:hover {
             background: rgba($color: $value, $alpha: 0.35) !important;
@@ -73,9 +74,23 @@ $value in $theme-colors {
             background: rgba($color: $value, $alpha: 0.1) !important;
         }
     }
+    .bordered-btn-#{$name} {
+        color: $value;
+        background: transparent !important;
+        border: 1px solid rgba($color: $value, $alpha: 0.3) !important;
+        &:hover {
+            color: $value !important;
+            background: rgba($color: $value, $alpha: 0.1) !important;
+        }
+
+        &:focus {
+            color: $value !important;
+            background: rgba($color: $value, $alpha: 0.1) !important;
+        }
+    }
 }
 
 
 * {
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Outfit', sans-serif;
 }
