--- a/assets/styles/scss/admin.scss
+++ b/assets/styles/scss/admin.scss
@@ -164,3 +164,6 @@ main {
 .row-collapse-toggler {
 }
 
+.grades-card{
+    border-top: 2px solid rgba($color: $dark-blue, $alpha: 0.5) !important;
+}
