--- a/assets/styles/css/app.css
+++ b/assets/styles/css/app.css
@@ -77,6 +77,7 @@ body {
   display: flex;
   gap: 10px;
   margin-bottom: 20px !important;
+  flex-wrap: wrap;
 }
 @media screen and (max-width: 768px) {
   .card-chatbox .chatbox .chat-item {
