--- a/assets/styles/scss/app.scss
+++ b/assets/styles/scss/app.scss
@@ -87,6 +87,7 @@ body {
             display: flex;
             gap: 10px;
             margin-bottom: 20px !important;
+            flex-wrap: wrap;
 
             @media screen and (max-width:768px) {
                 max-width: 90% !important;
